--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DatinApp.db"
+    "DefaultConnection": "Data Source=DatingApp.db"
   },
   "Logging": {
     "LogLevel": {
