--- a/DatimgApp-SPA/package.json
+++ b/DatimgApp-SPA/package.json
@@ -26,7 +26,10 @@
     "bootswatch": "^4.1.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^1.9.1",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-gallery": "^5.3.2",
+    "popper.js": "^1.14.7",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
