add photo upload delete function

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dfdkfiaok",
+    "ApiKey": "993774943761678",
+    "ApiSecret": "bM_mGGBXyQCrepEH7hcxPyX7byk"
+  }
 }
