--- a/DatimgApp-SPA/package.json
+++ b/DatimgApp-SPA/package.json
@@ -32,6 +32,7 @@
     "ngx-gallery": "^5.3.2",
     "popper.js": "^1.14.7",
     "rxjs": "^6.0.0",
+    "time-ago-pipe": "^1.3.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
